# android-app-gactions-test

./: .gitmodules  settings.gradle.kts
.github/workflows/: apk-build-deploy.yaml
app/: build.gradle.kts
app/src/androidTest/java/org/example/ballbalancinggame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/include/: accelerometerSensor.hpp  ball.hpp  ballbalancing.hpp  camera.hpp  grid.hpp  logger.hpp
app/src/main/cpp/src/: accelerometerSensor.cpp  ball.cpp  ballbalancinggame.cpp  camera.cpp  grid.cpp
app/src/main/java/org/example/ballbalancinggame/: MainActivity.kt
app/src/main/java/org/example/ballbalancinggame/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/example/ballbalancinggame/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
